syntax = "proto3";

option go_package = "go-base/proto";

message String {
  string value = 1;
}

message User {
  string  user_name = 1;
  string password = 2;
  string email=3;
}
message GetUserReq {
  string email = 1;
}
service HelloService {
  rpc Hello (String) returns (String);
  rpc Hello1 (String) returns (String);
  rpc GetUser (GetUserReq) returns (User);
  rpc Channel (stream String) returns (stream String);
}